--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
 }
 
 .logo {
@@ -9,6 +13,8 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 ul {
@@ -22,4 +28,12 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.right-links ul,
+.left-links ul {
+  display: flex;
+  gap: 12px;
+  padding: 0;
+  margin: 0;
 }
